# bccelerator

./: .gitattributes  __init__.py  _codec.py  animation.py  common.py  library.py  link.py  load.py  loader.py  main.py  node.py  object.py  pyproject.toml
bccelerator/tools/: __init__.py  animation.py  library.py  link.py  node.py  object.py
bccelerator/util/: __init__.py  _module.py  data.py  enums.py  polyfill.py  props.py  types.py  utils.py
core/: __init__.py  patches.py
core/tools/: __init__.py  animation.py  library.py  link.py  node.py  object.py
core/util/: __init__.py  _module.py  data.py  enums.py  polyfill.py  props.py  types.py  utils.py
core/utils/: _module.py  data.py  enums.py  polyfill.py  props.py  types.py  utils.py
